Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -9,9 +9,23 @@
   <div class="wrapper">
     <!-- HEADER -->
     <!-- SUB HEAD -->
-
+<h1>Welcome to Riyadh</h1>
+<h2>Where A Traditional Past Meets A Modern Future.</h2>
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
+      <section>
+        <img src="./images/transportation/transit.jpg">
+        <h3>Travel</h3>
+        <p>Once a mudbrick waystation along desert trading routes, Riyadh is now one of the wealthiest cities in the world. The country`s political, financial and administrative capital is also a city with a fascinating subtext</p>
+        <h3>History</h3>
+        <p>Riyadh dshjdhdmn jdhduyd jhdeuhd kwqu jdids7 hewty mdopdsu </p>
+        <img src="./images/garden.jpg">
+        <p>jdhjd uew7e jhdeyg6t kediddc </p>
+        <img src="./images/transportation/camels-in-truck.jpg">
+        <h3>Sources</h3>
+        <p></p>
+        <p>Wikepedia</p>
+      </section>
     </div>
   </div>
 </body>
