--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h3>History</h3>
         <p>Riyadh dshjdhdmn jdhduyd jhdeuhd kwqu jdids7 hewty mdopdsu </p>
         <img src="./images/garden.jpg">
-        <p>jdhjd uew7e jhdeyg6t kediddc </p>
+        <p>The city is divided into 15 municipal districts</p>
         <img src="./images/transportation/camels-in-truck.jpg">
         <h3>Sources</h3>
         <p></p>
