Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <h3>History</h3>
         <p>Riyadh dshjdhdmn jdhduyd jhdeuhd kwqu jdids7 hewty mdopdsu </p>
         <img src="./images/garden.jpg">
-        <p>The city is divided into 15 municipal districts</p>
+        <p> The city is divided into 15 municipal districts</p>
         <img src="./images/transportation/camels-in-truck.jpg">
         <h3>Sources</h3>
-        <p></p>
+        <p>Lonely Planet</p>
         <p>Wikepedia</p>
     </div>
   </div>
