--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <p> The city is divided into 15 municipal districts</p>
         <img src="./images/transportation/camels-in-truck.jpg">
         <h3>Sources</h3>
-        <p>Lonely Planet</p>
-        <p>Wikepedia</p>
+        <a href="" Lonely Planet></a>
+        <a href ="">Wikepedia</a>
     </div>
   </div>
 </body>
