--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img src="./images/transportation/camels-in-truck.jpg">
         <h3>Sources</h3>
         <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh" Lonely Planet></a>
-        <a href ="">Wikepedia</a>
+        <a href ="http://en.wikipedia.org/wiki/Riyadh">Wikepedia</a>
     </div>
   </div>
 </body>
